# trajectory_tracking

./: CMakeLists.txt  README.md  package.xml
launch/: backstepping.launch  feedback.launch  gazebo_tb3_sim.launch  mpc.launch  pid.launch
script/: plotter.py
src/: backstepping.cpp  feedback.cpp  mpc.cpp  pid.cpp
