<?xml version="1.0"?>
<package format="2">
  <name>trajectory_tracking</name>
  <version>0.0.0</version>
  <description>
  This ROS package contain a trajectory_tracking gazebo simulation using turtlebot3 robot
  model based on three diffrent controllers (PID, Backstepping, Feedbak linearization)
  </description>

  <maintainer email="damani.alaaeddine@gmail.com"> damani alla eddine </maintainer>
  <author email="damani.alaaeddine@gmail.com">damani alla eddine </author>

  <license>TODO</license>
  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
